Adds VersionControlMadeMeDoIt.txt to .gitignore
Signed-off-by: Fennec82

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,8 @@ maps/yw/cryogaia-03-transit.dmm.before
 maps/yw/cryogaia-02-mining.dmm.before
 maps/yw/cryogaia-01-centcomm.dmm.before
 maps/yw/residential/residential.dmm.before
+
+
+#Chaosstation Ignored Files
+
+VersionControlMadeMeDoIt.txt
